--- a/ci-operator/config/openshift/ci-tools/openshift-ci-tools-master.yaml
+++ b/ci-operator/config/openshift/ci-tools/openshift-ci-tools-master.yaml
@@ -15,6 +15,10 @@ base_images:
     name: centos
     namespace: origin
     tag: stream8
+  debian:
+    name: debian
+    namespace: prucek
+    tag: latest
 binary_build_commands: make production-install
 build_root:
   from_repository: true
@@ -889,8 +893,8 @@ tests:
   steps:
     test:
     - as: test
-      commands: echo "here i am"
-      from: os
+      commands: echo "here i am, rock you like a hurricane"
+      from: debian
       resources:
         requests:
           cpu: 100m
