--- a/ci-operator/config/openshift/ci-tools/openshift-ci-tools-master.yaml
+++ b/ci-operator/config/openshift/ci-tools/openshift-ci-tools-master.yaml
@@ -15,6 +15,10 @@ base_images:
     name: centos
     namespace: origin
     tag: stream8
+  golang:
+    name: golang
+    namespace: prucek
+    tag: "1.22"
 binary_build_commands: make production-install
 build_root:
   from_repository: true
@@ -903,6 +907,18 @@ tests:
     - as: test
       commands: echo "here i am"
       from: os
+      resources:
+        requests:
+          cpu: 100m
+          memory: 200Mi
+- as: canary-build03
+  cluster: build03
+  interval: 10m
+  steps:
+    test:
+    - as: test
+      commands: echo "here i am, rock you like a hurricane"
+      from: golang
       resources:
         requests:
           cpu: 100m
